--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav id="navigation">
-        <h2>Neogcamp project <span id="weight"> "Yudo Talk"</span></h2>
+        <h2>Mark-7 <span id="weight"> "Yudo Talk"</span></h2>
 
     </nav>
     <header>
